# python-file-type-guesser

./: .gitignore  CHANGELOG.md  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: python-publish.yml  python-test.yml
docs/: conf.py  index.rst  quick_start.rst
docs/reference/: core.rst  index.rst  types.rst
file_type_guesser/: __init__.py  constants.py  core.py  signatures.py  types.py
tests/: conftest.py  test_core.py  test_types.py
