[metadata]
name = file-type-guesser
version = attr: file_type_guesser.__version__
author = Leo Spratt
author_email = "contact@enchantedcode.co.uk"
description = Guess a files type from its content and extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enchant97/python-file-type-guesser
project_urls =
    Change Log = https://github.com/enchant97/python-file-type-guesser/blob/main/CHANGELOG.md
    Issues = https://github.com/enchant97/python-file-type-guesser/issues
license = MIT
keywords = git scm
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Text Processing
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude=tests
